Development
    Pan and Scan functionality causes display issues with old mplayers, --enable-panscan
    Pan and Scan functionality (with new mplayer)
    Separate out plugin cache value and gnome-mplayer cacheing (disabled by default in player)
    Added support for --ss and --endpos command line options, similar to mplayer options
    Apple HD trailer fixes
    Don't make the link active in the about dialog if we are using gtk < 2.14
    Updated zh_CN translation from launchpad
    Add configure flag for flat volume
    Fix configure issues with gnome-power-manager and some compiler warnings
    Fix GTK 2.14 specific code
    Fix column title in playlist converting _ in playlist filename to underlines in display
    Add gl2 to the list of possible vo's, my ATI r6xx works well with it, but not gl
    Change samplerate display from KB/s to KHz
0.9.7
    Make sure mouse pointer disappears when over the window and not moving, mplayer didn't always do it.
    Fix menu button not showing when starting with dvdnav://
    Fix up/down arrow buttons in playlist view, items were moving by play order was not set right
    Updated Polish translation
    Fix condition where in replace and play mode the content is updated rapidly and the app crashes
    Clean up code with 'make indent'
    Update po files
    Ensure that window is resized prior to launching the thread
    Add on metadata loader change from length to demuxer to determine if metadata is loaded
    Don't hang if non-media files are in the playlist, like album art
    Correct display problem where video says it is one size, but plays at another
    Correct details content
    Fix Details display, however, content is wrong
    Make the adjust layout code run in the event queue, rather than direct. However, this breaks details display
    Don't process keys while over the playlist
    Now that metadata loading is async, metadata is usually wrong for first item, so wait until it is available 